# docs/swagger/swagger.json
@@ -690,7 +690,7 @@
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "Send an audio message through WhatsApp",
+                "description": "Send an audio message through WhatsApp with optional reply context",
                 "consumes": [
                     "application/json"
                 ],
@@ -921,7 +921,7 @@
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "Send a document message through WhatsApp",
+                "description": "Send a document message through WhatsApp with optional reply context",
                 "consumes": [
                     "application/json"
                 ],
@@ -998,7 +998,7 @@
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "Send an image message through WhatsApp",
+                "description": "Send an image message through WhatsApp with optional reply context",
                 "consumes": [
                     "application/json"
                 ],
@@ -1691,7 +1691,7 @@
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "Send a video message through WhatsApp",
+                "description": "Send a video message through WhatsApp with optional reply context",
                 "consumes": [
                     "application/json"
                 ],
@@ -2035,6 +2035,9 @@
                 "caption": {
                     "type": "string",
                     "example": "Voice message"
+                },
+                "contextInfo": {
+                    "$ref": "#/definitions/ContextInfo"
                 },
                 "file": {
                     "type": "string",
@@ -2390,6 +2393,9 @@
                     "type": "string",
                     "example": "Important document"
                 },
+                "contextInfo": {
+                    "$ref": "#/definitions/ContextInfo"
+                },
                 "file": {
                     "type": "string",
                     "example": "https://example.com/document.pdf"
@@ -2479,6 +2485,9 @@
                 "caption": {
                     "type": "string",
                     "example": "Beautiful sunset photo"
+                },
+                "contextInfo": {
+                    "$ref": "#/definitions/ContextInfo"
                 },
                 "file": {
                     "type": "string",
@@ -2817,6 +2826,9 @@
                     "type": "string",
                     "example": "+5511999999999"
                 },
+                "contextInfo": {
+                    "$ref": "#/definitions/ContextInfo"
+                },
                 "file": {
                     "type": "string",
                     "example": "https://example.com/image.jpg"
@@ -3039,6 +3051,9 @@
                 "caption": {
                     "type": "string",
                     "example": "Check out this amazing video!"
+                },
+                "contextInfo": {
+                    "$ref": "#/definitions/ContextInfo"
                 },
                 "file": {
                     "type": "string",
